--- a/src/assets/styles/globals.sass
+++ b/src/assets/styles/globals.sass
@@ -1,14 +1,26 @@
 .wrapper
-  @apply container mx-auto px-5 py-5
+  @apply container mx-auto px-5
 
 .modal
   @apply fixed shadow-md text-white px-5 py-5 mx-auto my-auto top-[15%] left-0 right-0 max-w-lg w-full
 
 .btn
-  @apply px-3 py-1 transition-all text-lg
+  @apply px-3 py-1 transition-all
   &.primary
-    @apply bg-blue-500 hover:bg-blue-700
+    @apply bg-blue-500 hover:bg-blue-700 text-white
   &.danger
-    @apply bg-red-500 hover:bg-red-700
+    @apply bg-red-500 hover:bg-red-700 text-white
   &.warning
     @apply bg-yellow-500 hover:bg-yellow-700
+
+.form-group
+  @apply mb-2
+  label
+    @apply block
+  input
+    @apply border border-black px-2
+  select
+    @apply bg-gray-400 text-white
+
+hr
+  @apply border-[0.10px] h-0 border-gray-700 my-3
