--- a/src/assets/styles/globals.sass
+++ b/src/assets/styles/globals.sass
@@ -14,13 +14,15 @@
     @apply bg-yellow-500 hover:bg-yellow-700
 
 .form-group
-  @apply mb-2
+  @apply mb-5 relative
   label
     @apply block
   input
-    @apply border border-black px-2
+    @apply border border-black px-2 py-2
   select
     @apply bg-gray-400 text-white
+  .validation-errors
+    @apply text-red-500 block absolute z-10 bg-red-500 text-white px-3 shadow-lg rounded-md transition-all left-2 text-sm top-[90%]
 
 hr
   @apply border-[0.10px] h-0 border-gray-700 my-3
