adjust margins and paddings

--- a/src/assets/styles/globals.sass
+++ b/src/assets/styles/globals.sass
@@ -17,7 +17,7 @@
   @apply mb-5 relative
   label
     @apply block
-  input
+  input, textarea
     @apply border border-black px-2 py-2
   select
     @apply bg-gray-400 text-white
