add phone number verification to annoy more

--- a/src/assets/styles/globals.sass
+++ b/src/assets/styles/globals.sass
@@ -16,7 +16,7 @@
 .form-group
   @apply mb-5 relative
   label
-    @apply block
+    @apply block font-bold
   input, textarea, select
     @apply border border-black px-2 py-2
   select
